--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8523,3 +8523,15 @@ input {
   margin-top: 50px;
 }
 
+/* header */
+
+#logout {
+  cursor: default;
+}
+
+#logout:hover {
+  background-color: transparent;
+}
+
+/* footer */
+
