--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -168,3 +168,13 @@ input {
 .panel {
   margin-top: 50px;
 }
+/* header */
+
+#logout {
+  cursor: default;
+  &:hover {
+    background-color: transparent;
+  }
+}
+
+/* footer */
